fluxcd/apps/base/nextcloud/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
annotations:
  linkerd.io/inject: enabled
